syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "ServiceTradeGrpc";

service TradeGrpc {  
  // 1:一元调用:判断程序/网络是否启动
  rpc Activity (ActivityReq) returns (ActivityRes);
  // 2:一元调用:管理撮合交易对(开启,停止)
  rpc MarketManage(MarketManageReq) returns(MarketManageRes);
  // 3:一元调用:交易对配置更改
  rpc MarketConfig(MarketConfigReq) returns(MarketConfigRes);
  // 4:接收新订单
  rpc OrderReceive (stream OrderReceiveReq) returns (OrderReceiveRes);
}

message KeyValueGrpc{
  int64 key=1;
  bool value=2;
  string msg=3;
}

message ActivityReq {
  
};
message ActivityRes {

};

message MarketManageReq{
  repeated KeyValueGrpc market=1; 
}
message MarketManageRes{
  repeated KeyValueGrpc market=1;
}

message MarketConfigReq{
  repeated KeyValueGrpc market=1; 
}
message MarketConfigRes{
  repeated KeyValueGrpc market=1; 
}

message OrderReceiveReq{

}

message OrderReceiveRes{

}